<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="104dp"
        android:onClick="openItems"
        android:text="@string/add_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtItemOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtItemTwo"
        app:layout_constraintStart_toStartOf="@+id/txtItemTwo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtItemTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtItemThree"
        app:layout_constraintStart_toStartOf="@+id/txtItemThree"
        app:layout_constraintTop_toBottomOf="@+id/txtItemOne" />

    <TextView
        android:id="@+id/txtItemThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtItemFour"
        app:layout_constraintStart_toStartOf="@+id/txtItemFour"
        app:layout_constraintTop_toBottomOf="@+id/txtItemTwo" />
    <TextView
        android:id="@+id/txtItemFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtItemFive"
        app:layout_constraintStart_toStartOf="@+id/txtItemFive"
        app:layout_constraintTop_toBottomOf="@+id/txtItemThree" />

    <TextView
        android:id="@+id/txtItemFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtItemSix"
        app:layout_constraintStart_toStartOf="@+id/txtItemSix"
        app:layout_constraintTop_toBottomOf="@+id/txtItemFour" />

    <TextView
        android:id="@+id/txtItemSix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtItemSeven"
        app:layout_constraintStart_toStartOf="@+id/txtItemSeven"
        app:layout_constraintTop_toBottomOf="@+id/txtItemFive" />

    <TextView
        android:id="@+id/txtItemSeven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtItemEight"
        app:layout_constraintStart_toStartOf="@+id/txtItemEight"
        app:layout_constraintTop_toBottomOf="@+id/txtItemSix" />

    <TextView
        android:id="@+id/txtItemEight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtItemNine"
        app:layout_constraintStart_toStartOf="@+id/txtItemNine"
        app:layout_constraintTop_toBottomOf="@+id/txtItemSeven" />

    <TextView
        android:id="@+id/txtItemNine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtItemTen"
        app:layout_constraintStart_toStartOf="@+id/txtItemTen"
        app:layout_constraintTop_toBottomOf="@+id/txtItemEight" />

    <TextView
        android:id="@+id/txtItemTen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItemNine"
        />

    <EditText
        android:id="@+id/location_text"
        android:layout_width="218dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:onClick="openLocation"
        android:text="@string/get_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/location_text" />
</androidx.constraintlayout.widget.ConstraintLayout>